load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
# load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

# gazelle:prefix github.com/zalgonoise/ipcam-stream
gazelle(name = "gazelle")

buildifier(
    name = "buildifier-check",
    lint_mode = "warn",
    mode = "check",
    multi_diff = True,
)

buildifier(
    name = "buildifier-fix",
    lint_mode = "fix",
    mode = "fix",
    multi_diff = True,
)

go_library(
    name = "ipcam-stream_lib",
    srcs = ["main.go"],
    importpath = "github.com/zalgonoise/ipcam-stream",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "ipcam-stream",
    embed = [":ipcam-stream_lib"],
    visibility = ["//visibility:public"],
)
