load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ipcam",
    srcs = [
        "service.go",
        "stream.go",
    ],
    importpath = "github.com/ZalgoNoise/ipcam-stream/ipcam",
    visibility = ["//visibility:public"],
    deps = ["@com_github_u2takey_ffmpeg_go//:ffmpeg-go"],
)
